package bigtalkdesignMod.v14.v14_5;

public abstract class Observer {
    public abstract void update();
}
